--- a/styles/notion.css
+++ b/styles/notion.css
@@ -45,7 +45,7 @@
 
 .notion-header .notion-nav-header {
   max-width: 1100px;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
 }
 
 .notion-nav-header-rhs {
@@ -142,15 +142,15 @@
 
 @media only screen and (max-width: 920px) {
   .index-page.notion-page {
-    padding-left: 2vw;
-    padding-right: 2vw;
+    padding-left: 8vw;
+    padding-right: 8vw;
   }
 }
 
 @media only screen and (max-width: 720px) {
   .notion-page {
-    padding-left: 2vw;
-    padding-right: 2vw;
+    padding-left: 8vw;
+    padding-right: 8vw;
   }
 }
 
@@ -167,7 +167,9 @@
 
 .notion-title {
   display: block;
-  text-align: center;
+  text-align: left;
+  font-size: 35px;
+  font-weight: 700;
 }
 
 .notion-collection-row {
@@ -193,8 +195,8 @@
 .notion-page-cover-wrapper,
 .notion-page-cover-wrapper span,
 .notion-page-cover-wrapper img {
-  max-width: 1200px !important;
-  border-radius: 24px;
+  /*max-width: 1200px !important;*/
+  /*border-radius: 24px;*/
 }
 
 .notion-page-cover-wrapper {
@@ -347,13 +349,21 @@
 }
 
 /* if you don't want rounded page icon images, remove this */
+.notion-page-icon-hero {
+  display: block;
+  left: auto;
+}
+.notion-page-icon-hero.notion-page-icon-span {
+  margin-left: 0;
+}
 .notion-page-icon-hero.notion-page-icon-image {
-  border-radius: 50%;
-  box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);
+  margin-left: 0;
+  /*border-radius: 50%;*/
+  /*box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);*/
 }
 .notion-page-icon-hero.notion-page-icon-image span,
 .notion-page-icon-hero.notion-page-icon-image img {
-  border-radius: 50%;
+  /*border-radius: 50%;*/
 }
 
 .notion-header {
