--- a/styles/notion.css
+++ b/styles/notion.css
@@ -45,7 +45,7 @@
 
 .notion-header .notion-nav-header {
   max-width: 1100px;
-  /*margin: 0 auto;*/
+  margin: 0 auto;
 }
 
 .notion-nav-header-rhs {
