--- a/styles/notion.css
+++ b/styles/notion.css
@@ -156,7 +156,7 @@
 
 @media only screen and (max-width: 600px) {
   .notion-search-button {
-    display: none !important;
+    display: inline-flex !important;
   }
 }
 
