--- a/styles/notion.css
+++ b/styles/notion.css
@@ -56,6 +56,7 @@
   grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   grid-gap: 6vmin;
   gap: 6vmin;
+  border-top: 0;
 }
 
 .notion-gallery-grid .notion-page-icon-inline {
