--- a/styles/notion.css
+++ b/styles/notion.css
@@ -394,6 +394,6 @@
   padding: 0;
 }
 
-.notion-block-260baa77f1e1428b97fb14ac99c7c385 {
+/*.notion-block-260baa77f1e1428b97fb14ac99c7c385 {
   display: none;
-}
+}*/
