--- a/components/Comments/index.scss
+++ b/components/Comments/index.scss
@@ -2,9 +2,9 @@
   margin-top: 3rem;
   width: 100%;
 
-  @media (min-width: 1400px) {
-    width: calc(100% - 300px - 5rem);
-  }
+  // @media (min-width: 1400px) {
+  //   width: calc(100% - 300px - 5rem);
+  // }
 
   h2 {
     margin-bottom: 2rem;
