fix: 제목 길 경우 검색 가리는 오류

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -397,3 +397,12 @@
 /*.notion-block-260baa77f1e1428b97fb14ac99c7c385 {
   display: none;
 }*/
+@media only screen and (max-width: 768px) {
+  .breadcrumb.active .title {
+    white-space: nowrap; /* 줄바꿈 없애기 */
+    overflow: hidden; /* 넘치는 내용 숨기기 */
+    text-overflow: ellipsis; /* 넘치는 텍스트를 ...으로 대체 */
+    max-width: 180px; /* 최대 너비 설정 (적절하게 조절) */
+    display: inline-block; /* 블록 요소처럼 행동 */
+  }
+}
